Modernize Go plugin for IntelliJ 2026.x (build 261+)
Migrates the plugin from IntelliJ 2016.3 (build 163) to work with
IntelliJ IDEA 2026.x (build 261+), covering build system, deprecated
API removal, Go language modernization, and runtime fixes.

Build system:
- Migrate from Gradle IntelliJ Plugin 1.x to IntelliJ Platform Gradle
  Plugin 2.14.0
- Upgrade Gradle wrapper from 8.14 to 9.4.1
- Update Java target from 8 to 21
- Add Makefile with common dev targets (build, run, install, test, etc.)

Deprecated API migration (~100 files):
- ApplicationComponent/ModuleComponent → startup activities + services
- FileTypeFactory → <fileType> XML extension point
- ServiceManager/ModuleServiceManager → direct getService() calls
- VirtualFileAdapter/EditorFactoryAdapter → interface implementations
- NotificationGroup.balloonGroup → XML <notificationGroup> + NotificationGroupManager
- @Storage annotation modernization (remove id, file→value, StorageScheme)
- WriteCommandAction.Simple → fluent API
- PlatformIcons → AllIcons.Nodes
- ContainerUtil.new* factory methods → standard Java collections
- Fix generic wildcard signatures, Promise API, and other 2026.x changes

Plugin descriptors:
- Remove <application-components> and <module-components>
- Add <fileType>, <notificationGroup>, <editorFactoryListener>,
  <postStartupActivity> registrations
- Convert moduleService registrations to projectService

Go language modernization:
- Update grammar (go.bnf) for generics, type aliases, union types
- Update lexer (go.flex) for binary/octal literals, digit separators,
  tilde token
- Add go.mod/go.sum file type support
- Update GoConstants with versions through go1.24, modern OS/arch lists
- Add fuzz test (Go 1.18+) support to test framework
- Fix SDK version detection for Go 1.21+ (VERSION file, new zversion.go
  paths, disk-based fallback)
- Fix SDK setup write-action requirement

Runtime fixes:
- Fix module-level message bus usage (now forbidden)
- Fix service override (open=true)
- Fix